# docs

./: .gitignore  .pre-commit-config.yaml  README.md  guidance.txt  macros.py  package-lock.json  package.json  pyproject.toml  todo.txt  writing-guidance.txt  zensical-markdown.md  zensical.toml
.cursor/: mcp.json
.cursor/rules/: general.mdc  validation.mdc
.cursor/skills/browse-wallstreetio/: SKILL.md
.cursor/skills/check-main-repo-for-updates/: SKILL.MD
.cursor/skills/check-main-updates/: SKILL.MD
.cursor/skills/check-support-tickets/: SKILL.md
.cursor/skills/preview-local/: SKILL.md
.cursor/skills/proofread/: SKILL.md
.cursor/skills/update-auth/: SKILL.md
.github/workflows/: build.yml  docs.yml
agent-workspace/: .gitignore  change-log.md
docs/: index-copy.md  index.md  support.md  welcome.md
docs/assets/javascript/: feedback-form.js  hero-loader.js  hero.js
docs/chart-app.md/: chart-app-overview.md
docs/charts-app/: charts-app-overview.md
docs/community-app/: 1-community-app-overview.md  3-live-streams.md  4-chat-rooms.md
docs/education-app/: 1-education-app-overview.md  2-getting-started.md  4-wheel-strategy.md  5-trade-prodigy.md
docs/layout/: 1-overview.md  2-app-account-bar.md  3-chart-app.md  3-charts-app.md  4-education-app.md  5-community-app.md  5-comunity-app.md
docs/other-topics/: 1-overview.md
overrides/: home.html  main.html
overrides/partials/: footer.html  path-item.html  posthog.html
screenshots-workflow/complete/: .gitignore
screenshots-workflow/fresh/: .gitignore
scripts/: screenshot.py
(+28 files in other folders)
