[project]
name = "docs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bbox-visualizer>=0.3.0",
    "frozendict>=2.4.7",
    "loguru>=0.7.3",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "zensical>=0.0.43",
]

[dependency-groups]
dev = [
    "pre-commit",
    "pre-commit-uv",
    "ruff",
    "pytest-playwright",
    "click>=8.4.0",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
